<resources>
    <string name="app_name">WotStat</string>

    <string name="searchbutton">Search</string>
    <string name="accsearch"> Search for an Account</string>
    <string name="shortlistbutton">Shortlist</string>
    <string name="homebutton">Home</string>
    <string name="result">Game Result</string>
    <string name="acclevel">Level 128</string>
    <string name="masteries">Ace Tanker Medals 37</string>
    <string name="damagedealt">Damage: 4,671</string>
    <string name="gamehistory">Match History</string>
    <string name="godlist">Gods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="wotapi_error">Error connecting to the API</string>
    <string name="tv_savedacc">Saved Accounts:</string>
    <string name="battlesplayed">Battles: 19 234</string>
    <string name="playedtanks">Tanks</string>
    <string name="assisted">Assisted 2,627</string>
    <string name="blocked">Blocked: 1,407</string>
    <string name="winrate">Winrate: 49.52%</string>
</resources>