<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c1c1e "
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_playedtanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/playedtanks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_lasttank" />

    <ImageView
        android:id="@+id/img_lasttank"
        android:layout_width="93dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="FriendlyForeigner"
        android:textColor="#C6C6C6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_lasttank"
        app:layout_constraintTop_toTopOf="@+id/img_lasttank" />

    <TextView
        android:id="@+id/tv_battles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/battlesplayed"
        android:textColor="#C6C6C6"
        app:layout_constraintStart_toEndOf="@+id/img_lasttank"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_lastresult"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="Game Mode"
        android:textColor="#C6C6C6"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/tv_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="Online"
        android:textColor="#C6C6C6"
        app:layout_constraintBottom_toBottomOf="@+id/tv_lastresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_lasttank"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textColor="#C6C6C6"
        app:layout_constraintStart_toEndOf="@+id/tv_lastresult"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageView
        android:id="@+id/iv_Tank"
        android:layout_width="98dp"
        android:layout_height="77dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toStartOf="@+id/damage_dealt"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/winrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/winrate"
        android:textColor="#C6C6C6"
        app:layout_constraintStart_toEndOf="@+id/img_lasttank"
        app:layout_constraintTop_toBottomOf="@+id/tv_battles" />

    <TextView
        android:id="@+id/ace_tankers"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/masteries"
        android:textColor="#C6C6C6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Status" />

    <TextView
        android:id="@+id/damage_dealt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/damagedealt"
        android:textColor="#C6C6C6"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/damage_assisted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/assisted"
        android:textColor="#C6C6C6"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/damage_dealt" />

    <TextView
        android:id="@+id/damage_blocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/blocked"
        android:textColor="#C6C6C6"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/damage_assisted" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/gamehistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_lasttank" />

</androidx.constraintlayout.widget.ConstraintLayout>